# nn-zoo

./: .bash_history  .gitignore  .pre-commit-config.yaml  .wget-hsts  README.md  a.ipynb  balanced_parentheses.txt  discriminator.pth  generator.pth  pyproject.toml  requirements.txt  semantle.ipynb  setup.py
.archive/misc/: stable-cascade.ipynb
.github/workflows/: format-lint.yml  python-package.yml  release.yml  tests.yml
archive/misc/: tiny-imagenet.py
blog/: a.ipynb  teach.ipynb
blog/1-least-squares/: main.ipynb
blog/1-mnist/: main.py
blog/10-vqvae/: generate.ipynb  ldm.ipynb  main.ipynb  taming.ipynb  vqvae.py
blog/11-diffusion/: main.ipynb
blog/12-dotcloud/: main.ipynb
blog/2-cifar/: README.md  main.py
blog/2-mnist/: README.md  main.ipynb  main.py
blog/3-cifar10/: main.py
blog/3-names/: README.md  main.ipynb
blog/3-news/: names.ipynb
blog/3-tiny-imagenet/: main.py
blog/4-names/: main.ipynb
blog/4-reviews/: main.ipynb
blog/4-sherlock/: tiny-shakespeare.ipynb
blog/5-shakespeare/: a.ipynb  gpt.ipynb  main.ipynb
blog/6-gpt/: README.md  main.ipynb
celeb-hq/: diffusion.ipynb  diffusion.py  dpm.ipynb  gan.py
cifar10/: classifer.py  diffusion.ipynb  model.onnx
ml_zoo/: __init__.py  _default.py  celeba_hq.py  cifar.py  classifier.py  lenet.py  mnist.py  resnet.py  tinyimagenet.py  vgg.py
nn_zoo/: __init__.py  _utils.py  logger.py  model.py  trainer.py
playground/: README.md
qmnist/: classifer.ipynb  classifer.py  diffusion.ipynb  dpm.ipynb  gan.ipynb  model.onnx  vit.ipynb
serif_ml/: __init__.py
tests/: test_import.py
(+171 files in other folders)
