[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=6.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-zoo"
version = "0.1.1"
authors = [{ name = "Kara Ravindra", email = "contact@karanravindra.me" }]
description = "A collection of PyTorch utilities"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["pytorch", "machine-learning", "deep-learning"]
license = { text = "MIT" }
classifiers = [
    "Framework :: PyTorch",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["torch>=2.3", "torchvision>=0.18"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
